Co-authored-by: Ardivan Nur Raihan Rahman <ardivannrr@users.noreply.github.com> Co-authored-by: hudaajah025 <hudaajah025@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             <input placeholder="E-mail" type="email" />
           </div>
           <div class="form-group">
-            <textarea placeholder="Mensagem"></textarea>
+            <textarea placeholder="Message"></textarea>
           </div>
           <button class="submit-btn">Send message</button>
         </div>
